Update azure-pipeline.yaml for Azure Pipelines

--- a/samples/integration-testing/src/azure-pipeline.yaml
+++ b/samples/integration-testing/src/azure-pipeline.yaml
@@ -53,4 +53,4 @@ stages:
           command: plan
           workingDirectory: $(terraformWorkingDirectory)
           environmentServiceName: $(serviceConnection)
-          commandOptions: -var location=$(azureLocation)
+          commandOptions: -var location=$(azureLocation) skip_provider_registration = true
