--- a/samples/integration-testing/src/azure-pipeline.yaml
+++ b/samples/integration-testing/src/azure-pipeline.yaml
@@ -28,7 +28,7 @@ stages:
       steps:
       # Step 0 : run the Checkov Static Code Analysis
       - script:
-          mkdir CHeckovReport
+          mkdir CheckovReport
           docker pull bridgecrew/checkov
           docker run --tty --volume $(terraformWorkingDirectory):/tf bridgecrew/checkov --directory /tf --output junitxml > $(terraformWorkingDirectory)/CheckovReport/Checkov-Report.xml
         displayName: Checkov Static Code Analysis Docker Script
