--- a/samples/integration-testing/src/azure-pipeline.yaml
+++ b/samples/integration-testing/src/azure-pipeline.yaml
@@ -33,8 +33,9 @@ stages:
           touch CheckovReport/Checkov-Report.xml
           chmod 777 CheckovReport/Checkov-Report.xml
           ls -la CheckovReport
+          pwd
           docker pull bridgecrew/checkov
-          docker run -t -D --volume $(terraformWorkingDirectory):/tf bridgecrew/checkov --directory /tf --output junitxml > $(terraformWorkingDirectory)/CheckovReport/Checkov-Report.xml
+          docker run -t --volume $(terraformWorkingDirectory):/tf bridgecrew/checkov --directory /tf --output junitxml > $(terraformWorkingDirectory)/CheckovReport/Checkov-Report.xml
         displayName: Checkov Static Code Analysis Docker Script
 
       - task: PublishTestResults@2
