--- a/samples/integration-testing/src/azure-pipeline.yaml
+++ b/samples/integration-testing/src/azure-pipeline.yaml
@@ -28,14 +28,14 @@ stages:
       steps:
       # Step 0 : run the Checkov Static Code Analysis
       - script: |
-          cd $(terraformWorkingDirectory)
           mkdir CheckovReport
+          chmod 777 CheckovReport
           touch CheckovReport/Checkov-Report.xml
           chmod 777 CheckovReport/Checkov-Report.xml
           ls -la CheckovReport
           pwd
           docker pull bridgecrew/checkov
-          docker run -t --volume $(terraformWorkingDirectory):/tf bridgecrew/checkov --directory /tf --output junitxml >> $(terraformWorkingDirectory)/CheckovReport/Checkov-Report.xml
+          docker run -t --volume $(terraformWorkingDirectory):/tf bridgecrew/checkov --directory /tf --output junitxml > CheckovReport/Checkov-Report.xml
         displayName: Checkov Static Code Analysis Docker Script
 
       - task: PublishTestResults@2
