--- a/samples/integration-testing/src/azure-pipeline.yaml
+++ b/samples/integration-testing/src/azure-pipeline.yaml
@@ -35,7 +35,7 @@ stages:
           ls -la CheckovReport
           pwd
           docker pull bridgecrew/checkov
-          docker run -t -v $(System.DefaultWorkingDirectory):/tf bridgecrew/checkov --directory /tf --output junitxml > $(System.DefaultWorkingDirectory)/CheckovReport/Checkov-Report.xml
+          docker run -t -v $(terraformWorkingDirectory):/tf bridgecrew/checkov --directory /tf
         displayName: Checkov Static Code Analysis Docker Script
 
       - task: PublishTestResults@2
