--- a/samples/integration-testing/src/azure-pipeline.yaml
+++ b/samples/integration-testing/src/azure-pipeline.yaml
@@ -26,11 +26,19 @@ stages:
       pool:
         vmImage: ubuntu-20.04
       steps:
-
       # Step 1: run the Checkov Static Code Analysis
       - bash: $(terraformWorkingDirectory)/checkov.sh $(terraformWorkingDirectory)
         displayName: Checkov Static Code Analysis
-      - task: PublishTestResults@2
+    
+      # Step 0 : run the Checkov Static Code Analysis
+      - script: |
+          touch Checkov-Report.xml
+          chmod 777 Checkov-Report.xml
+          pwd
+          docker pull bridgecrew/checkov
+          docker run -t -v $(terraformWorkingDirectory):/tf bridgecrew/checkov -d /tf -o junitxml >> $(terraformWorkingDirectory)/Checkov-Report.xml
+        displayName: Checkov Static Code Analysis Docker Script        
+        - task: PublishTestResults@2
         displayName: Publish Checkov Test Results
         condition: succeededOrFailed()
         inputs:
