--- a/samples/integration-testing/src/azure-pipeline.yaml
+++ b/samples/integration-testing/src/azure-pipeline.yaml
@@ -31,9 +31,7 @@ stages:
         displayName: Checkov Static Code Analysis
     
       # Step 0 : run the Checkov Static Code Analysis
-      - script: |
-          touch Checkov-Report.xml
-          chmod 777 Checkov-Report.xml
+      - script:
           docker run -t -v $(terraformWorkingDirectory):/tf bridgecrew/checkov -d /tf -o junitxml >> $(terraformWorkingDirectory)/Checkov-Report.xml
         displayName: Checkov Static Code Analysis Docker Script        
       - task: PublishTestResults@2
