--- a/samples/integration-testing/src/azure-pipeline.yaml
+++ b/samples/integration-testing/src/azure-pipeline.yaml
@@ -31,8 +31,9 @@ stages:
         displayName: Checkov Static Code Analysis
     
       # Step 0 : run the Checkov Static Code Analysis
-      - script:
-          docker run -t -v $(terraformWorkingDirectory):/tf bridgecrew/checkov -d /tf -o junitxml >> $(terraformWorkingDirectory)/Checkov-Report.xml
+      - script: |
+         pip install checkov
+         checkov -d $(terraformWorkingDirectory) -o junitxml >> Checkov-Report.xml 
         displayName: Checkov Static Code Analysis Docker Script        
       - task: PublishTestResults@2
         displayName: Publish Checkov Test Results
