--- a/samples/integration-testing/src/azure-pipeline.yaml
+++ b/samples/integration-testing/src/azure-pipeline.yaml
@@ -71,4 +71,9 @@ stages:
           command: plan
           workingDirectory: $(terraformWorkingDirectory)
           environmentServiceName: $(serviceConnection)
-          commandOptions: -var location=$(azureLocation)
+          commandOptions: -var location=$(azureLocation) --out $(terraformWorkingDirectory)/plan.out
+      -script: |
+       docker pull eerkunt/terraform-compliance
+       function terraform-compliance { docker run --rm -v $(terraformWorkingDirectory):/target -i -t eerkunt/terraform-compliance "$@"; }
+       terraform-compliance -p plan.out -f features
+
