--- a/samples/integration-testing/src/azure-pipeline.yaml
+++ b/samples/integration-testing/src/azure-pipeline.yaml
@@ -77,7 +77,7 @@ stages:
           targetType: 'inline'
           script: |
             docker pull eerkunt/terraform-compliance
-            function terraform-compliance { docker run --rm -v $(terraformWorkingDirectory):/target -i -t eerkunt/terraform-compliance "$@"; }
+            function terraform-compliance { winpty docker run --rm -v $(terraformWorkingDirectory):/target -t eerkunt/terraform-compliance "$@"; }
             terraform-compliance -p plan.out -f features
         displayName: Compliance check
         
